# certificatinator

./: README.md  certificatinator.py  certificator.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_certificator.py
.github/workflows/: test.yml
